@@ -9,7 +9,8 @@ OBJ_RANDS = isaac.o	   \
 			isaac_x64.o\
 			parisi.o   \
 			well.o     \
-			well_x64.o
+			well_x64.o \
+			xorshift.o
 OBJ_RANDS_FINAL = rands.o
 LIB_RANDS_FINAL = librands.a
 
@@ -24,6 +25,7 @@ isaac_x64.o: isaac_x64.c
 parisi.o: parisi.c
 well.o: well.c
 well_x64.o: well_x64.c
+xorshift.o: xorshift.c
 
 speed-test: rands speed.o
 	$(CC) $(CFLAGS) speed.o -o speed $(LDFLAGS) -lrands -L.
