@@ -10,7 +10,7 @@ based on states, so you can have more than one sources of
 random numbers. This is interesting if you are doing parallel
 computations and need a thread-safe way to produce numbers.
 
-So far, it only has three generators, but this will change with
+So far, it only has four generators, but this will change with
 time (and with the ones I think are more interesting) But
 if you want to contribute to the code, just send them (^\_^)
 
@@ -39,6 +39,9 @@ there will be (I hope) more information about how they work.
 * Well\_x64
     * Type: Twisted Generalised Feedback Shift Register
     * Period: 2⁵¹²-1
+* Xorshift
+    * Type: Linear Feedback Shift Register
+    * Period: 2¹²⁸-1
 
 Note: For a little perspective, my biggest simulation has been
 the Ising model (which is fairly little although bigger than
