@@ -6,6 +6,7 @@ TODO LIST
 -[ ] Mersenne Twister
 -[X] Parisi-Rapuano
 -[X] WELL
+-[X] Xorshift
 -[ ] Everyone that I don't know and is interesting =)
 
 * Documentation to write
@@ -13,6 +14,7 @@ TODO LIST
 -[ ] Mersenne Twister
 -[ ] Parisi-Rapuano
 -[ ] WELL
+-[ ] Xorshift
 
 * General things to do:
 -[ ] Decide and add a license
