@@ -7,6 +7,7 @@
 #define PR_RAND         1
 #define WELL_RAND       1
 #define WELL_X64_RAND   1
+#define XOR_RAND        1
 
 #endif
 
