@@ -7,6 +7,7 @@ Done some experiments about changing the pr_rand() function
 to a define, just as ISAAC is implemented. The results show
 almost no improvement so it is left as it is.
 
+Added the Xorshift generator
 
 2013-03-12
 ----------
